k-files/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: capivara-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: capivara-app
  template:
    metadata:
      labels:
        app: capivara-app
    spec:
      containers:
        - name: capivara-app
          image: damirojr/capivara:1.0
          resources:
            requests:
              memory: "64Mi"
              cpu: "256m"
            limits:
              memory: "128Mi"
              cpu: "512m"
          ports:
            - containerPort: 80
