k-files/loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: nginx
  ports:
  - name: port-tcp
    protocol: TCP
    port: 8080
    targetPort: 80
