k-files/service.yml
apiVersion: v1
kind: Service
metadata:
  name: capivara-service
  namespace: capivara-app
spec:
  selector:
    app: capivara-app
  ports:
    - port: 80
