k-files/test-ingress.yml
kind: Pod
apiVersion: v1
metadata:
  name: capivara-app
  labels:
    app: capivara
spec:
  containers:
  - image: damirojr/capivara:1.0
    name: capivara-app
---
kind: Service
apiVersion: v1
metadata:
  name: capivara-service
spec:
  selector:
    app: capivara
  ports:
  - port: 80
---
kind: Pod
apiVersion: v1
metadata:
  name: portifolio-app
  labels:
    app: portifolio
spec:
  containers:
  - image: damirojr/portifolio:1.0
    name: portifolio-app
---
kind: Service
apiVersion: v1
metadata:
  name: portifolio-service
spec:
  selector:
    app: portifolio
  ports:
  - port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: capivara-service
            port:
              number: 80
      - path: /portifolio
        pathType: Prefix
        backend:
          service:
            name: portifolio-service
            port:
              number: 80
